--- a/bot/index.html
+++ b/bot/index.html
@@ -1,1 +1,2 @@
-Bot World
+<h1>2Cubed Bots</h1>
+<p>Do you need a bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.com</a></p>
