--- a/bot/index.html
+++ b/bot/index.html
@@ -1,2 +1,12 @@
 <h1>2Cubed Bots</h1>
-<p>Do you need a bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.com</a>. :)</p>
+<p>Do you need a Twitch Bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.com</a>. :)</p>
+
+<p>Current Bots:</p>
+<ul>
+  <li>GigaRexMC for <a href="twitch.tv/NanoRexMC">NanoRexMC</a></li>
+</ul>
+
+<h8>TODO:</h8>
+<ul>
+  <li><h8>Get a better looking website.</h8></li>
+</ul>
