--- a/bot/index.html
+++ b/bot/index.html
@@ -3,8 +3,22 @@
 
 <p>Current Bots:</p>
 <ul>
-  <li>GigaRexMC for <a href="twitch.tv/NanoRexMC">NanoRexMC</a></li>
+  <li><b>GigaRexMC</b> for <a href="twitch.tv/NanoRexMC">NanoRexMC</a></li>
 </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <h6>TODO:</h6>
 <ul>
