--- a/bot/index.html
+++ b/bot/index.html
@@ -20,7 +20,4 @@
 
 
 
-<h6>TODO:</h6>
-<ul>
-  <li><h6>Get a better looking website.</h6></li>
-</ul>
+<h6>TODO: Get a better looking website.</h6>
