--- a/bot/index.html
+++ b/bot/index.html
@@ -6,7 +6,7 @@
   <li><b>GigaRexMC</b> for <a href="twitch.tv/NanoRexMC">NanoRexMC</a></li>
 </ul>
 
-<p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</p>
+<p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of HugAYoutuber. (HugACoder?)</p>
 
 
 
