--- a/bot/index.html
+++ b/bot/index.html
@@ -4,6 +4,7 @@
 <p>Current Bots:</p>
 <ul>
   <li><b>GigaRexMC</b> for <a href="twitch.tv/NanoRexMC">NanoRexMC</a></li>
+  <li><b>MobBot</b> for <a href="twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
 </ul>
 
 <p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</p>
