--- a/bot/index.html
+++ b/bot/index.html
@@ -7,6 +7,7 @@
   <li><b>MobbinBot</b> for <a href="twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
   <li><b>TheAutoCarrot</b> for <a href="twitch.tv/HumansOnFire15">Em</a></li>
   <li><b>XynBot</b> for <a href="twitch.tv/Xyntak">Xyntak</a></li>
+  <li><b>TheDukeBot</b> for <a href="twitch.tv/The_duke_minecraft">The Duke Minecraft</a></li>
 </ul>
 
 <p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</p>
