--- a/bot/xynbot/commands/index.html
+++ b/bot/xynbot/commands/index.html
@@ -1,3 +1,3 @@
 <head>
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/17DxmOwOPZGRQm-0f9fmZnyW1o9ZsqZMpP6srCiy9QHg/edit#gid=0." />
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/17DxmOwOPZGRQm-0f9fmZnyW1o9ZsqZMpP6srCiy9QHg/" />
 </head>
