--- a/bot/index.html
+++ b/bot/index.html
@@ -10,6 +10,7 @@
   <li><b>TheDukeBot</b> for <a href="twitch.tv/The_duke_minecraft">The Duke Minecraft</a></li>
   <li><b>HypeGamebot</b> for <a href="twitch.tv/Hypegameboy">HypeGameboy</a></li>
   <li><b>DavBot2005</b> for <a href="twitch.tv/Davkas2005">Davkas2005</a></li>
+  <li><b>IceFlameBot</b> for <a href="twitch.tv/Hannahiceflame">Hannahiceflame</a></li>
 </ul>
 
 <p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</p>
