--- a/bot/index.html
+++ b/bot/index.html
@@ -1,5 +1,5 @@
 <h1>2Cubed Bots</h1>
-<p>Do you need a Twitch Bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.com</a>. :)</p>
+<p>Do you need a Twitch Bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.co$
 <p>The current source code can be found <a href="https://github.com/2Cubed/2CubedBot/blob/v0.1.0/2CubedBot.py">here</a>.</p>
 
 <p>Current Bots:</p>
@@ -14,7 +14,7 @@
   <li><b>IceFlameBot</b> for <a href="twitch.tv/Hannahiceflame">Hannahiceflame</a></li>
 </ul>
 
-<p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</p>
+<p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</$
 
 
 
