--- a/bot/index.html
+++ b/bot/index.html
@@ -1,5 +1,5 @@
 <h1>2Cubed Bots</h1>
-<p>Do you need a Twitch Bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.co$
+<p>Do you need a Twitch Bot? 2Cubed can code a custom one, just for you. Contact him at <a href="mailto:2CubedBot@gmail.com">2CubedBot@gmail.com</p>
 <p>The current source code can be found <a href="https://github.com/2Cubed/2CubedBot/blob/v0.1.0/2CubedBot.py">here</a>.</p>
 
 <p>Current Bots:</p>
