--- a/bot/index.html
+++ b/bot/index.html
@@ -4,7 +4,7 @@
 
 <p>Current Bots:</p>
 <ul>
-  <li><b>GigaRexMC</b> for <a href="https://www.twitch.tv/NanoRexMC">NanoRexMC</a></li>
+  <li><b>GigaRexMC</b> for <a href="http://www.twitch.tv/NanoRexMC">NanoRexMC</a></li>
   <li><b>MobbinBot</b> for <a href="twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
   <li><b>TheAutoCarrot</b> for <a href="twitch.tv/HumansOnFire15">Em</a></li>
   <li><b>XynBot</b> for <a href="twitch.tv/Xyntak">Xyntak</a></li>
