--- a/bot/index.html
+++ b/bot/index.html
@@ -5,13 +5,13 @@
 <p>Current Bots:</p>
 <ul>
   <li><b>GigaRexMC</b> for <a href="www.twitch.tv/NanoRexMC">NanoRexMC</a></li>
-  <li><b>MobbinBot</b> for <a href="twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
-  <li><b>TheAutoCarrot</b> for <a href="twitch.tv/HumansOnFire15">Em</a></li>
-  <li><b>XynBot</b> for <a href="twitch.tv/Xyntak">Xyntak</a></li>
-  <li><b>TheDukeBot</b> for <a href="twitch.tv/The_duke_minecraft">The Duke Minecraft</a></li>
-  <li><b>HypeGamebot</b> for <a href="twitch.tv/Hypegameboy">HypeGameboy</a></li>
-  <li><b>DavBot2005</b> for <a href="twitch.tv/Davkas2005">Davkas2005</a></li>
-  <li><b>IceFlameBot</b> for <a href="twitch.tv/Hannahiceflame">Hannahiceflame</a></li>
+  <li><b>MobbinBot</b> for <a href="www.twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
+  <li><b>TheAutoCarrot</b> for <a href="www.twitch.tv/HumansOnFire15">Em</a></li>
+  <li><b>XynBot</b> for <a href="www.twitch.tv/Xyntak">Xyntak</a></li>
+  <li><b>TheDukeBot</b> for <a href="www.twitch.tv/The_duke_minecraft">The Duke Minecraft</a></li>
+  <li><b>HypeGamebot</b> for <a href="www.twitch.tv/Hypegameboy">HypeGameboy</a></li>
+  <li><b>DavBot2005</b> for <a href="www.twitch.tv/Davkas2005">Davkas2005</a></li>
+  <li><b>IceFlameBot</b> for <a href="www.twitch.tv/Hannahiceflame">Hannahiceflame</a></li>
 </ul>
 
 <p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</$
