Added MobbinBot, LumberBot, and RukBot.

--- a/bot/index.html
+++ b/bot/index.html
@@ -12,6 +12,9 @@
   <li><b>HypeGamebot</b> for <a href="http://www.twitch.tv/Hypegameboy">HypeGameboy</a></li>
   <li><b>DavBot2005</b> for <a href="http://www.twitch.tv/Davkas2005">Davkas2005</a></li>
   <li><b>IceFlameBot</b> for <a href="http://www.twitch.tv/Hannahiceflame">Hannahiceflame</a></li>
+  <li><b>MobbinBot</b> for <a href="http://www.twitch.tv/MobbinMinecraft">MobbinMinecraft</a></li>
+  <li><b>LumberBot3000</b> for <a href="http://www.twitch.tv/Brhysh1">Brhysh</a></li>
+  <li><b>RukBot</b> for <a href="http://www.twitch.tv/Rukbukus">Rukbukus</a></li>
 </ul>
 
 <p>By using one of 2Cubed's bots, you are supporting a "smaller" person in the community, similar to the idea of #HugAYoutuber. (#HugACoder?)</$
